FIX: For popup with login form reset top gap if no button close

--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -418,7 +418,11 @@
 
   &.popup-login {
     max-width: 344px;
-    padding: 52px 20px 23px;
+    padding: 23px 20px;
+
+    &:not(.popup-login_no-close) {
+      padding-top: 52px;
+    }
 
     .content {
       overflow: visible;
